--- a/plugins/discovery-ec2/build.gradle
+++ b/plugins/discovery-ec2/build.gradle
@@ -122,8 +122,8 @@ tasks.register("writeTestJavaPolicy") {
           "permission java.security.SecurityPermission \"getProperty.keystore.type.compat\";",
           "permission java.security.SecurityPermission \"getProperty.org.bouncycastle.ec.max_f2m_field_size\";",
           "permission java.util.PropertyPermission \"aws.ec2MetadataServiceEndpoint\", \"write\";",
-          "permission java.io.FilePermission \"${user.home}/.aws/credentials\", \"read\";",
-          "permission java.io.FilePermission \"${user.home}/.aws/config\", \"read\";",
+          "permission java.io.FilePermission \"\${user.home}/.aws/credentials\", \"read\";",
+          "permission java.io.FilePermission \"\${user.home}/.aws/config\", \"read\";",
           "permission java.util.PropertyPermission \"http.proxyHost\", \"read\";",
           "};"
         ].join("\n")
@@ -133,8 +133,8 @@ tasks.register("writeTestJavaPolicy") {
         [
           "grant {",
           "permission java.util.PropertyPermission \"aws.ec2MetadataServiceEndpoint\", \"write\";",
-          "permission java.io.FilePermission \"${user.home}/.aws/credentials\", \"read\";",
-          "permission java.io.FilePermission \"${user.home}/.aws/config\", \"read\";",
+          "permission java.io.FilePermission \"\${user.home}/.aws/credentials\", \"read\";",
+          "permission java.io.FilePermission \"\${user.home}/.aws/config\", \"read\";",
           "permission java.util.PropertyPermission \"http.proxyHost\", \"read\";",
           "};"
         ].join("\n"))
