--- a/test/fixtures/aws-ec2-fixture/build.gradle
+++ b/test/fixtures/aws-ec2-fixture/build.gradle
@@ -16,5 +16,5 @@ dependencies {
     transitive = false
   }
   api project(':test:framework')
-  api project(':test:fixtures:s3-fixture') /* TODO NOMERGE pull out utils to common lib */
+  api project(':test:fixtures:aws-fixture-utils')
 }
